--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -8,9 +8,8 @@
   <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Антон Кастрицкий</a> <br>
   <a href="https://yadi.sk/i/9oydqY8iwcY__A">Вебпак, вид сквозь монокль.pdf</a><br>
   webpack-bundle-analyzer <br>
-  yarn <br>
-  yarn outdated //проверка пакетов на актуальность
-  yarn audit --fix//проверка на уязвимость и исправление
+  yarn outdated //проверка пакетов на актуальность<br>
+  yarn audit --fix//проверка на уязвимость и исправление<br>
 </div>
 
 <article>
