--- a/programming/index.html
+++ b/programming/index.html
@@ -259,28 +259,6 @@ s { color: red; }
     <a href="https://youtu.be/EaJHp-c_HVk">WASM Meetup 2019</a><br>
 </div>
 
-<div>
-    <h2>lighthouse</h2>
-    <a href="https://github.com/aFarkas/lazysizes">lazysizes</a><br>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps">PWA</a> , TWA <br>
-    <a href="https://create-react-app.dev/docs/making-a-progressive-web-app/">making-a-progressive-web-app</a><br>
-    <a href="https://developer.mozilla.org/ru/docs/Web/%D0%9C%D0%B0%D0%BD%D0%B8%D1%84%D0%B5%D1%81%D1%82">manifest.webmanifest</a><br>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps/Offline_Service_workers">Service Workers</a><br>
-    <pre><code>
-//.html
-await navigator.serviceWorker.register(
-  'sw.js', updateViaCache: 'all');
-
-//sw.js
-self.addEventListener('fetch',
-  e => e.respondWith(new Response(`
-    <!doctype html>< script>
-window.parent.postMessage(await handle(location))
-    < /script>
-  `)))
-    </code></pre>
-</div>
-
 <div><h2>AI</h2>
     ELIZA <br>
     IBM Watson <br>
@@ -360,6 +338,8 @@ window.parent.postMessage(await handle(location))
 <div>
     <h2>design / Верстка</h2>
     <ul>
+        <li><a href="https://material-ui.com">Material-UI</a></li>
+        <li><a href="https://masonry.desandro.com/">Masonry</a></li>
         <li><a href="https://materializecss.com">materialize-css</a></li>
         <li><a href="https://www.muicss.com/">MUI</a></li>
         <li><a href="bootstrap.html" target="_blank"><img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png" alt="Bootstrap"> Bootstrap</a></li>
@@ -517,6 +497,7 @@ public class Home {
 
 <div>
   <ul>
+    <li><a href="https://github.com/aFarkas/lazysizes">lazysizes</a></li>
     <li><img src="https://electronjs.org/images/favicon.ico" alt="electronjs"><a href="https://electronjs.org/">electronjs.org</a></li>
     <li><a href="https://github.com/Tencent/omi"><img src="https://tencent.github.io/omi/assets/omi-logo2019.svg" alt="omi"> omi</a></li>
     <li><a href="https://youtu.be/fCQBMPjCgxE">Jira</a>, <a href="https://youtu.be/jj93FUQx-Ew">Slack</a></li>
