lightest lb, update footer, + content

--- a/programming/index.html
+++ b/programming/index.html
@@ -28,7 +28,7 @@ s { color: red; }
     background-size: 16px;
     padding-left: 20px;
 }
-[href*="github"] {
+main [href*="github"] {
     background: url(https://github.githubassets.com/favicon.ico) no-repeat 0;
     background-size: 16px;
     padding-left: 20px;
