--- a/programming/angular.html
+++ b/programming/angular.html
@@ -4,6 +4,7 @@
   <div id="links">
     <a href="https://youtu.be/h9lGLpvKeFI">NgRuAir #14 - Codelab</a> <a href="https://codelab.fun">Angular Codelab</a><br>
     <a href="https://angular.io"><img src="https://angular.io/assets/images/favicons/favicon.ico"></a><br>
+    <a href="https://github.com/Angular-RU">Angular-RU</a>
     <a href="https://itvdn.com/ru/webinars/description/angular-jump-start">Angular 4 Jump Start. (2017)</a><br>
     <a href="https://itvdn.com/ru/video/angular2_essential"> Angular 2 Essential (2016)</a><br>
     <a href="https://itvdn.com/ru/video/angular_cli">Angular CLI (2017)</a><br>
