--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -101,19 +101,19 @@
 <div>
   <h4> спина , пресс и бицепс</h4>
   <a href="https://youtu.be/YlKspOmniDc">Полная Тренировка Спины За 23 Минуты | Джефф Кавальер</a><br>
-  <a href="https://youtu.be/7AgKyL47XnU">Тренировка мышц спины. Денис Гусев.</a><br>
-   · <a href="https://youtu.be/RKEWzx_7hBg"></a> Подтягивания к груди
-  <br> · <a href="https://youtu.be/8uVW6WXB5ps"></a> Горизонтальный вис спереди
-  <br> · <a href="https://youtu.be/Pfc4elsfohw"></a> Флажок . Human flag
+  <a href="https://youtu.be/7AgKyL47XnU">Тренировка мышц спины. Денис Гусев.</a>
+  <br><a href="https://youtu.be/RKEWzx_7hBg">Подтягивания к груди</a>
+  <br><a href="https://youtu.be/8uVW6WXB5ps">Горизонтальный вис спереди</a>
+  <br><a href="https://youtu.be/Pfc4elsfohw">Флажок . Human flag</a>
   <br>
-  <br> · <a href="https://youtu.be/prcbxIb9ApQ"></a> Ручонки Качонка! Палю Схемы:-) 
-  <br> · <a href="https://youtu.be/LQkBCv82PF0"></a> 5 убийц трицепса и бицепса (для массивных рук)
-  <br> · <a href="https://youtu.be/Nsxe-ngeZn4"></a> 8 Способов Подъема Штанги На Бицепс!
+  <br><a href="https://youtu.be/prcbxIb9ApQ">Ручонки Качонка! Палю Схемы:-)</a>
+  <br><a href="https://youtu.be/LQkBCv82PF0">5 убийц трицепса и бицепса (для массивных рук)</a>
+  <br><a href="https://youtu.be/Nsxe-ngeZn4">8 Способов Подъема Штанги На Бицепс!</a>
   
   <h4> Упражнения при болях в спине</h4>
   <a href="https://youtu.be/8KiW9KqVMjI">Боль в спине и шее: как избавиться и можно ли заниматься спортом при грыже</a><br>
-  <br> · <a href="https://youtu.be/LrURE7cftZw">Упражнения при болях в позвоночнике Дикуль</a>
-  <br> · <a href="https://youtu.be/ueP157AfXF4">Суставная гимнастика Норбекова - medical gymnastics of Norbekov.</a>
+  <br><a href="https://youtu.be/LrURE7cftZw">Упражнения при болях в позвоночнике Дикуль</a>
+  <br><a href="https://youtu.be/ueP157AfXF4">Суставная гимнастика Норбекова - medical gymnastics of Norbekov.</a>
 </div>
 
 <div>
@@ -121,26 +121,27 @@
   <a href="https://youtu.be/E4ze_bMWbc8">Секреты идеальных грудных. Денис Гусев.</a><br>
   <a href="https://youtu.be/dT9KX4fJ-S8">Тренировка мышц груди. Денис Гусев.</a><br>
   <a href="https://youtu.be/MM4ZBCLX6TU">Тренировка дельтовидных мышц. Денис Гусев.</a><br>
-  <br> · <a href="https://youtu.be/4yzmijgmDc8"></a> Это жим гантелей лёжа на наклонной скамье, детка!
-  <br> · <a href="https://youtu.be/Y5YqrJpSHq8"></a> Это тяга гантелей стоя, детка!
-  <br> · <a href="https://youtu.be/LOE0tuV8D2s"></a> 2 ЛУЧШИХ УПРАЖНЕНИЯ ДЛЯ ШИРОКИХ ПЛЕЧ!!! <br> · <a href="https://youtu.be/KagXLrhics4"></a> КАК НАКАЧАТЬ ГРУДНЫЕ МЫШЦЫ
-  <br> · <a href="https://youtu.be/DhJNSWxzwZQ"></a> Как ЖАТЬ ЛЕЖА Истинному кОчке! (Шоб Перло ГРУДАК) 
-  <br> · <a href="https://youtu.be/j8-6LRCtWUs"></a> ВОЛШЕБНАЯ РАМКА ДЛЯ ЭПИЧНЫХ ГРУДНЫХ МЫШЦ 
-  <br> · <a href="https://youtu.be/Vdh3UitElEI"></a> Это ЖИМ ЛЕЖА, Детка:-))))
-  <br> · <a href="https://youtu.be/C381Jj23OxM"></a> "ДОЖИМЫ КРАВЦОВА"
-  <br> · <a href="https://youtu.be/6Y_a9mZ1J3Y"></a> Как НАКАЧАТЬ ГРУДЬ ГераКАКла? 
+  <br><a href="https://youtu.be/4yzmijgmDc8">Это жим гантелей лёжа на наклонной скамье, детка!</a>
+  <br><a href="https://youtu.be/Y5YqrJpSHq8">Это тяга гантелей стоя, детка!</a>
+  <br><a href="https://youtu.be/LOE0tuV8D2s">2 ЛУЧШИХ УПРАЖНЕНИЯ ДЛЯ ШИРОКИХ ПЛЕЧ!!!</a>
+  <br><a href="https://youtu.be/KagXLrhics4">КАК НАКАЧАТЬ ГРУДНЫЕ МЫШЦЫ</a>
+  <br><a href="https://youtu.be/DhJNSWxzwZQ">Как ЖАТЬ ЛЕЖА Истинному кОчке! (Шоб Перло ГРУДАК)</a>
+  <br><a href="https://youtu.be/j8-6LRCtWUs">ВОЛШЕБНАЯ РАМКА ДЛЯ ЭПИЧНЫХ ГРУДНЫХ МЫШЦ</a>
+  <br><a href="https://youtu.be/Vdh3UitElEI">Это ЖИМ ЛЕЖА, Детка:-))))</a>
+  <br><a href="https://youtu.be/C381Jj23OxM">"ДОЖИМЫ КРАВЦОВА"</a>
+  <br><a href="https://youtu.be/6Y_a9mZ1J3Y">Как НАКАЧАТЬ ГРУДЬ ГераКАКла?</a>
 </div>
 
 <div>
 <h4>ноги</h4>
-  <br> · <a href="https://youtu.be/Om8D3BkKPC4"></a> · приседания со штангой
-  <br> · <a href="https://youtu.be/39rDFUPME7U"></a> · жим ногами
-  <br> 
-  <br> · <a href="https://youtu.be/28N5xUtG734"></a> Горизонтальный упор. Обучалка
+  <br><a href="https://youtu.be/Om8D3BkKPC4">приседания со штангой</a>
+  <br><a href="https://youtu.be/39rDFUPME7U">жим ногами</a>
   <br>
-  <br> · <a href="https://youtu.be/QC2a5u8VfQ0"></a>Стойка на руках. Обучалка
+  <br><a href="https://youtu.be/28N5xUtG734">Горизонтальный упор. Обучалка</a>
   <br>
-  <br> · <a href="https://youtu.be/odi9R0xcFzo"></a>Медленный выход силой
+  <br><a href="https://youtu.be/QC2a5u8VfQ0">Стойка на руках. Обучалка</a>
+  <br>
+  <br><a href="https://youtu.be/odi9R0xcFzo">Медленный выход силой</a>
 </div>
 
 <div>
