--- a/programming/index.html
+++ b/programming/index.html
@@ -219,6 +219,7 @@ main [href*="github"] {
 </ul></div>
 
 <div>
+    <a href="https://www.youtube.com/playlist?list=PLKaafC45L_SRoYnuEW5cgqHN-kpSTVfMs">Школа разработки интерфейсов 2019-2020</a><br>
     <a href="https://youtu.be/vCR-Ezx_ivI">SpeechKit в Яндекс.Облаке</a><br>
     <a href="https://youtu.be/1U4NrB9v9ZA">Я.Субботник по разработке интерфейсов. лето2019</a><br>
     <a href="https://youtu.be/jPqNyF0hH3k">Я.Субботник по разработке интерфейсов. весна2019</a><br>
@@ -543,7 +544,7 @@ public class Home {
 
 <div>
     <a href="https://mini-haber.web.app/">mini-haber.web.app</a><br>
-    <a href="../nitro/" target="_blank">Nitro</a><br>
+    <!-- <a href="../nitro/" target="_blank">Nitro</a><br> -->
     <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br>
     <a href="primery/about/" target="_blank">about</a><br>
     <a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a><br>
