--- a/programming/react.html
+++ b/programming/react.html
@@ -11,6 +11,8 @@
 </div>
 
 <div>
+  <a href="https://youtu.be/0UbkJ6Izue8">React: монтируй, демонтируй, обновляй. ШРИ2020</a><br>
+  <a href="https://youtu.be/SnmfK4YuGlk">React-приложение. ШРИ2020</a><br>
     * <a href="https://itvdn.com/ru/video/react-js-essential">ReactJS Essential Without ES6</a> <!-- <a href="primery/react1.html">result</a> --> 
     <a href="https://github.com/krambertech/react-essential-course">krambertech/</a><br>
     <a href="https://youtu.be/-k8w0x-rp80">Уроки React JS. webDeveloperBlog.2020</a><br>
