--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -38,6 +38,7 @@
 <main class="flex">
 
 <div id="links" class="img16">
+  <a href="http://bajyou.narod.ru/">Шаолиньцюань</a><br>
   <a href="http://www.fit4life.ru/"><img src="http://www.fit4life.ru/favicon.ico"> Fit4Life.ru</a><br>
   <a href="http://athlete.ru/"><img src="http://athlete.ru/favicon.ico"> athlete.ru</a><br>
   <a href="https://www.youtube.com/user/FightNerds"> FightNerds</a><br>
@@ -96,6 +97,18 @@
   <a href="https://youtu.be/30h1qSFaIag">FST-7</a><br>
   <a href="https://youtu.be/ahG-VDA2VQc">СИСТЕМА ПЛИНТОВИЧА</a><br>
   <a href="https://youtu.be/cSQN6TDjAO4">РОСТх2 (Медленные Мышечные Волокна)</a>
+</div>
+
+<div>
+  <h2>Растяжка</h2>
+  Юлиана Платонова
+  <ul>
+    <li><a href="https://youtu.be/z4J7dTjuU-A">Растяжка для новичков - Сесть на шпагат</a></li>
+    <li><a href="https://youtu.be/KkVzDi0d4qs">Растяжка для единоборств. Stretching for martial arts.</a></li>
+    <li><a href="https://youtu.be/jv09kP72Jpg">Растяжка под хайкик и другие амплитудные удары ногами.</a></li>
+  </ul>
+  <a href="https://youtu.be/CCI-rFTFWYU">Упражнения на растяжку для бойца от Андрея Басынина</a>
+  
 </div>
 
 <div>
