--- a/programming/javascript.html
+++ b/programming/javascript.html
@@ -12,10 +12,13 @@
   <a href="https://eloquentjavascript.net"><img src="https://eloquentjavascript.net/favicon.ico" alt="EJS"></a>
   <a href="https://skillbox.ru/media/code/javascript_glavnyy_instrument_frontend/"><img src="https://skillbox.ru/favicon.ico" alt="Skillbox"></a>
   <br><br>
+  <a href="https://www.youtube.com/channel/UCIo6TsJzLVRGbRZxKzoNeFQ">MoscowJS</a><br>
+  <a href="https://youtu.be/tAgVINdc_o0">Продвинутый JavaScript. ШРИ2020</a><br>
+  <a href="https://youtu.be/2QAUAZ5qgJM">Функциональное программирование в мире JavaScript. ШРИ2020</a><br>
+  <a href="https://youtu.be/Bluxbh9CaQ0">JavaScript Основы для Начинающих - Полный Курс за 6 часов [2020]</a><br>
   <a href="https://youtu.be/KS2ngnRAKlg">Чистый JavaScript. Практика. Авторизация, сборка, деплой .2020</a><br>
   <a href="https://www.youtube.com/playlist?list=PLqKQF2ojwm3l4oPjsB9chrJmlhZ-zOzWT">Сложный JavaScript простым языком. Владилен Минин (2019)</a><br>
   <a href="https://youtu.be/v6AVfIupNB8">Композиция или Наследование в JavaScript?</a><br>
-  <a href="https://www.youtube.com/channel/UCIo6TsJzLVRGbRZxKzoNeFQ">MoscowJS</a><br>
   <a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/A_re-introduction_to_JavaScript">Повторное введение в JavaScript (JS учебник)</a><br>
   <a href="https://github.com/azat-io/you-dont-know-js-ru">"Вы не знаете JS"</a><br>
   <a href="https://webref.ru/tech/javascript">WebRef</a><br>
@@ -1267,7 +1270,17 @@ Promise.reject(error) – возвращает промис с ошибкой er
 			</code></pre></details></li>
 		<li><details><summary>dinamic-imports</summary>
 			<pre><code>
+async function load() {
+    let say = await import('./say.js');
+    say.hi();
+    say.bye();
+    say.default();
+}
+//-----------
 
+import('./say.js')
+  .then()
+  .catch();
 			</code></pre></details></li>
 		<li><details><summary>Proxy, Reflect</summary>
 			<pre><code>
